Added list apply, moved list into util directory.     - Added a list_apply() to apply a function to all elements in a       list.     - Added the util directory for general utility code.

--- a/meson.build
+++ b/meson.build
@@ -13,7 +13,7 @@ dependencies = [
 # All the source files that end in '.c' in alphabetical order.
 source = files([
     'src/main.c',
-    'src/list.c'
+    'src/util/list.c'
 ])
 
 include = [
