--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "terminal.integrated.defaultProfile.windows": "Command Prompt",
-    "mesonbuild.configureOnOpen": true,
+    "terminal.integrated.defaultProfile.windows": "Command Prompt"
 }
